--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,14 +21,14 @@ node {
     echo "PWD is ${PWD}"
 
     stage("Git push"){
-        
-        withCredentials([string(credentialsId: 'github_token', variable: 'gittoken')]) {
-            sh """
-               cat >./jenkins_build.json <<EOF
+        sh """
+            cat >jenkins_build.json <<EOF
                {
                     "version": "test"
                }
-               EOF
+            EOF
+        """
+        withCredentials([string(credentialsId: 'github_token', variable: 'gittoken')]) {
                git add jenkins_build.json
                git commit -m "Updating jenkins json file"
                git push
