--- a/JenkinsFile
+++ b/JenkinsFile
@@ -41,6 +41,7 @@ node {
             """
             //Pusing files to github
             sh """
+               git pull
                git add jenkins_build.json
                git commit -m "Updating jenkins json file"
                git push
