--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,7 +29,7 @@ node {
                git config --global user.email 'zone.abhishek@gmail.com'
                git config --global user.name 'Abhishek Gupta'
                git remote set-url origin https://${gittoken}@github.com/guptaabhishek1/Jenkins.git
-               // git checkout master
+               # git checkout master
                git branch
             """
             // Updating or Creating  the version file before commit 
