--- a/JenkinsFile
+++ b/JenkinsFile
@@ -45,7 +45,7 @@ node {
                #git merge origin origin/master
                git add jenkins_build.json
                git commit -m "Updating jenkins json file"
-               git push
+               git push HEAD:master
             """
    
     }
