--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,15 +9,15 @@ node {
     def buildNo = env.BUILD_NO
     def PWD = pwd()
     
-    echo env.GIT_REPO_URL
-    echo env.GIT_COMMIT
-    echo env.GIT_BRANCH
-    echo env.GIT_REVISION
-    
+    //echo env.GIT_REPO_URL
+    //echo env.GIT_COMMIT
+    //echo env.GIT_BRANCH
+    //echo env.GIT_REVISION
     // PRINT ENVIRONMENT TO JOB
+    
     echo "workspace directory is ${workspace}"
     echo "build URL is ${env.BUILD_URL}"
-    echo "build URL is ${env.BUILD_NO}"
+    echo "build No is ${env.BUILD_NO}"
     echo "PWD is ${PWD}"
 
     stage("Git push"){
