--- a/JenkinsFile
+++ b/JenkinsFile
@@ -25,6 +25,7 @@ node {
                git config --global user.email 'zone.abhishek@gmail.com'
                git config --global user.name 'Abhishek Gupta'
                git remote set-url origin https://${gittoken}@github.com/guptaabhishek1/Jenkins.git
+               git clean -dfx
                git checkout master
             """
             
