--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,19 +2,6 @@ node {
    
     def buildNumber = env.BUILD_NUMBER
     def workspace = env.WORKSPACE
-    def buildUrl = env.BUILD_URL
-    def buildNo = env.BUILD_NO
-    
-    //echo env.GIT_REPO_URL
-    //echo env.GIT_COMMIT
-    //echo env.GIT_BRANCH
-    //echo env.GIT_REVISION
-    // PRINT ENVIRONMENT TO JOB
-    
-    echo "workspace directory is ${workspace}"
-    echo "build URL is ${env.BUILD_URL}"
-    echo "build No is ${env.BUILD_NUMBER}"
-    echo "PWD is ${PWD}"
 
     stage("Git push"){
         checkout scm
@@ -24,8 +11,7 @@ node {
             sh """
                git config --global user.email 'zone.abhishek@gmail.com'
                git config --global user.name 'Abhishek Gupta'
-               git remote set-url origin https://${gittoken}@github.com/guptaabhishek1/Jenkins.git
-               git clean -dfx
+               git clone https://${gittoken}@github.com/guptaabhishek1/Jenkins.git
                git checkout master
             """
             
