--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,8 @@ node {
             sh """
                git config --global user.email 'zone.abhishek@gmail.com'
                git config --global user.name 'Abhishek Gupta'
-               git clone https://${gittoken}@github.com/guptaabhishek1/Jenkins.git
+               git clone https://${gittoken}@github.com/guptaabhishek1/Jenkins.git version_update_folde
+               cd version_update_folder
                git checkout master
             """
             
@@ -28,7 +29,9 @@ EOF
                git add jenkins_build.json
                git commit -m "Updating jenkins json file"
                git push origin HEAD:master
+               rm -rf version_update_folder
             """
+            
    
     }
     }
